0_Intern_project/jitfailure-dolfin_expression_da271782d6051adacf552aaaca37ebdc/error.log
/tmp/tmpisdekaxc/dolfin_expression_da271782d6051adacf552aaaca37ebdc.cpp: In member function ‘virtual void dolfin::dolfin_expression_da271782d6051adacf552aaaca37ebdc::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpisdekaxc/dolfin_expression_da271782d6051adacf552aaaca37ebdc.cpp:63:36: error: ‘r’ was not declared in this scope
           values[0] = a*exp(-b*pow(r, 2));
                                    ^
/tmp/tmpisdekaxc/dolfin_expression_da271782d6051adacf552aaaca37ebdc.cpp: In member function ‘virtual double dolfin::dolfin_expression_da271782d6051adacf552aaaca37ebdc::get_property(std::__cxx11::string) const’:
/tmp/tmpisdekaxc/dolfin_expression_da271782d6051adacf552aaaca37ebdc.cpp:75:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "a") return a;          if (name == "b") return b;
           ^~
/tmp/tmpisdekaxc/dolfin_expression_da271782d6051adacf552aaaca37ebdc.cpp:75:47: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "a") return a;          if (name == "b") return b;
                                               ^~
